# mend-pilot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: models.yaml  watched_repos.yaml
docs/superpowers/: PHASE-2-HANDOFF.md
docs/superpowers/plans/: 2026-05-16-phase-1-skeleton.md  2026-05-16-phase-2-full-agent-system.md  2026-05-16-phase-2-working-agent.md  2026-05-17-phase-3-eval-and-polish.md
docs/superpowers/specs/: 2026-05-16-mend-pilot-design.md  2026-05-16-oss-pr-bot-design.md
src/ossagent/: app.py  config.py  crons.py  db.py  github_client.py  models.py  pr_creator.py  scheduler.py  telegram.py  telemetry.py  triager.py  webhook.py  worker.py
src/ossagent/agent/: ast_locator.py  context.py  context_extractor.py  graph.py  nodes.py  state.py  tools.py
