[project]
name = "ossagent"
version = "0.1.0"
description = "Multi-agent OSS PR contributor bot"
requires-python = ">=3.12"
dependencies = [
    "modal>=0.66",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "PyGithub>=2.5",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ossagent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
